change in style css

--- a/src/Section/style.css
+++ b/src/Section/style.css
@@ -5,10 +5,13 @@
 }
 
 .section__header {
-    font-size: 20px;
-    padding: 20px;
-    margin: 0;
     border-bottom: 1px solid #ddd;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
 }
 
 
