--- a/src/Tasks/style.css
+++ b/src/Tasks/style.css
@@ -13,6 +13,10 @@
     border-bottom: 1px solid #ddd;
 }
 
+.tasks__content--hidden {
+    display: none;
+}
+
 .tasks__content--done {
     text-decoration: line-through;
 }
